# esh

./: .gitignore  CMakeLists.txt  Makefile
src/: esh_array.c  esh_array.h  esh_bg.c  esh_bg.h  esh_cmd.c  esh_cmd.h  esh_control.c  esh_control.h  esh_fg.c  esh_fg.h  esh_kill.c  esh_kill.h  esh_proc.c  esh_proc.h  esh_tokens.c  esh_tokens.h  esh_utils.c  esh_utils.h  main.c
